--- a/requirements.txt
+++ b/requirements.txt
@@ -10,14 +10,19 @@ MarkupSafe==1.1.1
 matplotlib==3.3.0
 numpy==1.19.1
 pandas==1.0.5
+pickleshare==0.7.5
 Pillow==7.2.0
 pyparsing==2.4.7
 python-dateutil==2.8.1
 pytz==2020.1
 regex==2020.7.14
+requests-oauthlib==1.3.0
 scikit-learn==0.23.1
 scipy==1.5.2
 six==1.15.0
 sklearn==0.0
 threadpoolctl==2.1.0
+tweepy==3.8.0
+urllib3==1.25.9
 Werkzeug==1.0.1
+wordcloud==1.5.0
