--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ pandas>=1.0.5
 pickleshare>=0.7.5
 Pillow>=7.2.0
 pyparsing>=2.4.7
+python>=3.8
 python-dateutil>=2.8.1
 pytz>=2020.1
 regex>=2020.7.14
